// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Linear/Time charts font color is white with a dark background color 1`] = `
{
  "background": "#010101",
  "chartJsConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": "#1F77B4",
          "borderColor": "rgb(31,119,180)",
          "data": [
            {
              "x": "19",
              "y": 11,
            },
            {
              "x": "18",
              "y": 12,
            },
            {
              "x": "17",
              "y": 13,
            },
          ],
          "fill": false,
          "label": "10",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(31,119,180)",
        },
      ],
      "labels": [
        "19",
        "18",
        "17",
      ],
    },
    "options": {
      "animation": {
        "duration": 0,
      },
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "hover": {
        "animationDuration": 10,
      },
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 10,
        },
      },
      "legend": {
        "labels": {
          "fontColor": "#FFFFFF",
          "generateLabels": [Function],
        },
        "onClick": undefined,
        "position": "top",
      },
      "maintainAspectRatio": false,
      "responsive": true,
      "responsiveAnimationDuration": 0,
      "scales": {
        "xAxes": [
          {
            "ticks": {
              "callback": [Function],
              "fontColor": "#FFFFFF",
              "labelOffset": 2,
              "maxRotation": 60,
              "minRotation": 15,
              "padding": 5,
            },
            "type": "linear",
          },
        ],
        "yAxes": [
          {
            "position": "left",
            "ticks": {
              "beginAtZero": true,
              "callback": [Function],
              "fontColor": "#FFFFFF",
            },
          },
        ],
      },
      "title": {
        "display": true,
        "fontColor": "#FFFFFF",
        "fontSize": 22,
        "fontStyle": "normal",
        "text": "test",
      },
      "tooltips": {
        "callbacks": {
          "label": [Function],
          "title": [Function],
        },
      },
    },
    "type": "line",
  },
}
`;

exports[`Linear/Time charts snapshot test of chartJS configuration for date chart 1`] = `
{
  "background": "#FFFFFF",
  "chartJsConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": "#1F77B4",
          "borderColor": "rgb(31,119,180)",
          "data": [
            {
              "x": "1/19/1900",
              "y": 10,
            },
            {
              "x": "1/18/1900",
              "y": 11,
            },
            {
              "x": "1/17/1900",
              "y": 12,
            },
            {
              "x": "1/16/1900",
              "y": 13,
            },
          ],
          "fill": false,
          "label": "Series 1",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(31,119,180)",
        },
      ],
      "labels": [
        "1/19/1900",
        "1/18/1900",
        "1/17/1900",
        "1/16/1900",
      ],
    },
    "options": {
      "animation": {
        "duration": 0,
      },
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "hover": {
        "animationDuration": 10,
      },
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 10,
        },
      },
      "legend": {
        "labels": {
          "fontColor": "#000000",
          "generateLabels": [Function],
        },
        "onClick": undefined,
        "position": "top",
      },
      "maintainAspectRatio": false,
      "responsive": true,
      "responsiveAnimationDuration": 0,
      "scales": {
        "xAxes": [
          {
            "ticks": {
              "fontColor": "#000000",
              "labelOffset": 2,
              "maxRotation": 60,
              "maxTicksLimit": 15,
              "minRotation": 15,
              "padding": 5,
            },
            "time": {
              "displayFormats": {
                "day": "M/D/YYYY",
              },
              "parser": "M/D/YYYY",
              "unit": "day",
            },
            "type": "time",
          },
        ],
        "yAxes": [
          {
            "position": "left",
            "ticks": {
              "beginAtZero": true,
              "callback": [Function],
              "fontColor": "#000000",
            },
          },
        ],
      },
      "title": {
        "display": true,
        "fontColor": "#000000",
        "fontSize": 22,
        "fontStyle": "normal",
        "text": "test",
      },
      "tooltips": {
        "callbacks": {
          "label": [Function],
        },
      },
    },
    "type": "line",
  },
}
`;

exports[`Linear/Time charts snapshot test of chartJS configuration for linear chart 1`] = `
{
  "background": "#FFFFFF",
  "chartJsConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": "#1F77B4",
          "borderColor": "rgb(31,119,180)",
          "data": [
            {
              "x": "20",
              "y": 10,
            },
            {
              "x": "19",
              "y": 11,
            },
            {
              "x": "18",
              "y": 12,
            },
            {
              "x": "17",
              "y": 13,
            },
          ],
          "fill": false,
          "label": "Series 1",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(31,119,180)",
        },
      ],
      "labels": [
        "20",
        "19",
        "18",
        "17",
      ],
    },
    "options": {
      "animation": {
        "duration": 0,
      },
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "hover": {
        "animationDuration": 10,
      },
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 10,
        },
      },
      "legend": {
        "labels": {
          "fontColor": "#000000",
          "generateLabels": [Function],
        },
        "onClick": undefined,
        "position": "top",
      },
      "maintainAspectRatio": false,
      "responsive": true,
      "responsiveAnimationDuration": 0,
      "scales": {
        "xAxes": [
          {
            "ticks": {
              "callback": [Function],
              "fontColor": "#000000",
              "labelOffset": 2,
              "maxRotation": 60,
              "minRotation": 15,
              "padding": 5,
            },
            "type": "linear",
          },
        ],
        "yAxes": [
          {
            "position": "left",
            "ticks": {
              "beginAtZero": true,
              "callback": [Function],
              "fontColor": "#000000",
            },
          },
        ],
      },
      "title": {
        "display": true,
        "fontColor": "#000000",
        "fontSize": 22,
        "fontStyle": "normal",
        "text": "test",
      },
      "tooltips": {
        "callbacks": {
          "label": [Function],
          "title": [Function],
        },
      },
    },
    "type": "line",
  },
}
`;

exports[`datasource tests create a chart with stacked bar 1`] = `
{
  "background": "#FFFFFF",
  "chartJsConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": "rgb(31,119,180)",
          "borderColor": "rgb(31,119,180)",
          "data": [
            30,
          ],
          "label": "P4",
        },
      ],
      "labels": [
        "P4",
      ],
    },
    "options": {
      "animation": {
        "duration": 0,
      },
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "hover": {
        "animationDuration": 10,
      },
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 10,
        },
      },
      "legend": {
        "labels": {
          "fontColor": "#000000",
        },
        "onClick": undefined,
        "position": "top",
      },
      "maintainAspectRatio": false,
      "responsive": true,
      "responsiveAnimationDuration": 0,
      "scales": {
        "xAxes": [
          {
            "stacked": true,
            "ticks": {
              "fontColor": "#000000",
              "labelOffset": 2,
              "maxRotation": 60,
              "minRotation": 15,
              "padding": 5,
            },
          },
        ],
        "yAxes": [
          {
            "position": "left",
            "stacked": true,
            "ticks": {
              "beginAtZero": true,
              "callback": [Function],
              "fontColor": "#000000",
            },
          },
        ],
      },
      "title": {
        "display": true,
        "fontColor": "#000000",
        "fontSize": 22,
        "fontStyle": "normal",
        "text": "test",
      },
      "tooltips": {
        "callbacks": {
          "label": [Function],
        },
      },
    },
    "type": "bar",
  },
}
`;

exports[`datasource tests create chart with a dataset of one cell (no title) 1`] = `
{
  "background": "#FFFFFF",
  "chartJsConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": "#1F77B4",
          "borderColor": "rgb(31,119,180)",
          "data": [
            30,
          ],
          "fill": false,
          "label": "Series 1",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(31,119,180)",
        },
      ],
      "labels": [
        "P4",
      ],
    },
    "options": {
      "animation": {
        "duration": 0,
      },
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "hover": {
        "animationDuration": 10,
      },
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 10,
        },
      },
      "legend": {
        "labels": {
          "fontColor": "#000000",
          "generateLabels": [Function],
        },
        "onClick": undefined,
        "position": "top",
      },
      "maintainAspectRatio": false,
      "responsive": true,
      "responsiveAnimationDuration": 0,
      "scales": {
        "xAxes": [
          {
            "ticks": {
              "fontColor": "#000000",
              "labelOffset": 2,
              "maxRotation": 60,
              "minRotation": 15,
              "padding": 5,
            },
          },
        ],
        "yAxes": [
          {
            "position": "left",
            "ticks": {
              "beginAtZero": true,
              "callback": [Function],
              "fontColor": "#000000",
            },
          },
        ],
      },
      "title": {
        "display": true,
        "fontColor": "#000000",
        "fontSize": 22,
        "fontStyle": "normal",
        "text": "test",
      },
      "tooltips": {
        "callbacks": {
          "label": [Function],
        },
      },
    },
    "type": "line",
  },
}
`;

exports[`datasource tests create chart with column datasets 1`] = `
{
  "background": "#FFFFFF",
  "chartJsConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": "#1F77B4",
          "borderColor": "rgb(31,119,180)",
          "data": [
            10,
            11,
            12,
          ],
          "fill": false,
          "label": "first column dataset",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(31,119,180)",
        },
        {
          "backgroundColor": "#FF7F0E",
          "borderColor": "rgb(255,127,14)",
          "data": [
            20,
            19,
            18,
          ],
          "fill": false,
          "label": "second column datase…",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(255,127,14)",
        },
      ],
      "labels": [
        "P1",
        "P2",
        "P3",
      ],
    },
    "options": {
      "animation": {
        "duration": 0,
      },
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "hover": {
        "animationDuration": 10,
      },
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 10,
        },
      },
      "legend": {
        "labels": {
          "fontColor": "#000000",
          "generateLabels": [Function],
        },
        "onClick": undefined,
        "position": "top",
      },
      "maintainAspectRatio": false,
      "responsive": true,
      "responsiveAnimationDuration": 0,
      "scales": {
        "xAxes": [
          {
            "ticks": {
              "fontColor": "#000000",
              "labelOffset": 2,
              "maxRotation": 60,
              "minRotation": 15,
              "padding": 5,
            },
          },
        ],
        "yAxes": [
          {
            "position": "left",
            "ticks": {
              "beginAtZero": true,
              "callback": [Function],
              "fontColor": "#000000",
            },
          },
        ],
      },
      "title": {
        "display": true,
        "fontColor": "#000000",
        "fontSize": 22,
        "fontStyle": "normal",
        "text": "test",
      },
      "tooltips": {
        "callbacks": {
          "label": [Function],
        },
      },
    },
    "type": "line",
  },
}
`;

exports[`datasource tests create chart with column datasets with category title 1`] = `
{
  "background": "#FFFFFF",
  "chartJsConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": "#1F77B4",
          "borderColor": "rgb(31,119,180)",
          "data": [
            10,
            11,
            12,
          ],
          "fill": false,
          "label": "first column dataset",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(31,119,180)",
        },
        {
          "backgroundColor": "#FF7F0E",
          "borderColor": "rgb(255,127,14)",
          "data": [
            20,
            19,
            18,
          ],
          "fill": false,
          "label": "second column datase…",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(255,127,14)",
        },
      ],
      "labels": [
        "P1",
        "P2",
        "P3",
      ],
    },
    "options": {
      "animation": {
        "duration": 0,
      },
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "hover": {
        "animationDuration": 10,
      },
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 10,
        },
      },
      "legend": {
        "labels": {
          "fontColor": "#000000",
          "generateLabels": [Function],
        },
        "onClick": undefined,
        "position": "top",
      },
      "maintainAspectRatio": false,
      "responsive": true,
      "responsiveAnimationDuration": 0,
      "scales": {
        "xAxes": [
          {
            "ticks": {
              "fontColor": "#000000",
              "labelOffset": 2,
              "maxRotation": 60,
              "minRotation": 15,
              "padding": 5,
            },
          },
        ],
        "yAxes": [
          {
            "position": "left",
            "ticks": {
              "beginAtZero": true,
              "callback": [Function],
              "fontColor": "#000000",
            },
          },
        ],
      },
      "title": {
        "display": true,
        "fontColor": "#000000",
        "fontSize": 22,
        "fontStyle": "normal",
        "text": "test",
      },
      "tooltips": {
        "callbacks": {
          "label": [Function],
        },
      },
    },
    "type": "line",
  },
}
`;

exports[`datasource tests create chart with column datasets without series title 1`] = `
{
  "background": "#FFFFFF",
  "chartJsConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": "#1F77B4",
          "borderColor": "rgb(31,119,180)",
          "data": [
            10,
            11,
            12,
          ],
          "fill": false,
          "label": "Series 1",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(31,119,180)",
        },
        {
          "backgroundColor": "#FF7F0E",
          "borderColor": "rgb(255,127,14)",
          "data": [
            20,
            19,
            18,
          ],
          "fill": false,
          "label": "Series 2",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(255,127,14)",
        },
      ],
      "labels": [
        "P1",
        "P2",
        "P3",
      ],
    },
    "options": {
      "animation": {
        "duration": 0,
      },
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "hover": {
        "animationDuration": 10,
      },
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 10,
        },
      },
      "legend": {
        "labels": {
          "fontColor": "#000000",
          "generateLabels": [Function],
        },
        "onClick": undefined,
        "position": "top",
      },
      "maintainAspectRatio": false,
      "responsive": true,
      "responsiveAnimationDuration": 0,
      "scales": {
        "xAxes": [
          {
            "ticks": {
              "fontColor": "#000000",
              "labelOffset": 2,
              "maxRotation": 60,
              "minRotation": 15,
              "padding": 5,
            },
          },
        ],
        "yAxes": [
          {
            "position": "left",
            "ticks": {
              "beginAtZero": true,
              "callback": [Function],
              "fontColor": "#000000",
            },
          },
        ],
      },
      "title": {
        "display": true,
        "fontColor": "#000000",
        "fontSize": 22,
        "fontStyle": "normal",
        "text": "test",
      },
      "tooltips": {
        "callbacks": {
          "label": [Function],
        },
      },
    },
    "type": "line",
  },
}
`;

exports[`datasource tests create chart with only the dataset title (no data) 1`] = `
{
  "background": "#FFFFFF",
  "chartJsConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": "#1F77B4",
          "borderColor": "rgb(31,119,180)",
          "data": [
            undefined,
            undefined,
          ],
          "fill": false,
          "label": "30",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(31,119,180)",
        },
      ],
      "labels": [
        "P5",
        "P6",
      ],
    },
    "options": {
      "animation": {
        "duration": 0,
      },
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "hover": {
        "animationDuration": 10,
      },
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 10,
        },
      },
      "legend": {
        "labels": {
          "fontColor": "#000000",
          "generateLabels": [Function],
        },
        "onClick": undefined,
        "position": "top",
      },
      "maintainAspectRatio": false,
      "responsive": true,
      "responsiveAnimationDuration": 0,
      "scales": {
        "xAxes": [
          {
            "ticks": {
              "fontColor": "#000000",
              "labelOffset": 2,
              "maxRotation": 60,
              "minRotation": 15,
              "padding": 5,
            },
          },
        ],
        "yAxes": [
          {
            "position": "left",
            "ticks": {
              "beginAtZero": true,
              "callback": [Function],
              "fontColor": "#000000",
            },
          },
        ],
      },
      "title": {
        "display": true,
        "fontColor": "#000000",
        "fontSize": 22,
        "fontStyle": "normal",
        "text": "test",
      },
      "tooltips": {
        "callbacks": {
          "label": [Function],
        },
      },
    },
    "type": "line",
  },
}
`;

exports[`datasource tests create chart with rectangle dataset 1`] = `
{
  "background": "#FFFFFF",
  "chartJsConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": "#1F77B4",
          "borderColor": "rgb(31,119,180)",
          "data": [
            10,
            11,
            12,
          ],
          "fill": false,
          "label": "first column dataset",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(31,119,180)",
        },
        {
          "backgroundColor": "#FF7F0E",
          "borderColor": "rgb(255,127,14)",
          "data": [
            20,
            19,
            18,
          ],
          "fill": false,
          "label": "second column datase…",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(255,127,14)",
        },
      ],
      "labels": [
        "P1",
        "P2",
        "P3",
      ],
    },
    "options": {
      "animation": {
        "duration": 0,
      },
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "hover": {
        "animationDuration": 10,
      },
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 10,
        },
      },
      "legend": {
        "labels": {
          "fontColor": "#000000",
          "generateLabels": [Function],
        },
        "onClick": undefined,
        "position": "top",
      },
      "maintainAspectRatio": false,
      "responsive": true,
      "responsiveAnimationDuration": 0,
      "scales": {
        "xAxes": [
          {
            "ticks": {
              "fontColor": "#000000",
              "labelOffset": 2,
              "maxRotation": 60,
              "minRotation": 15,
              "padding": 5,
            },
          },
        ],
        "yAxes": [
          {
            "position": "left",
            "ticks": {
              "beginAtZero": true,
              "callback": [Function],
              "fontColor": "#000000",
            },
          },
        ],
      },
      "title": {
        "display": true,
        "fontColor": "#000000",
        "fontSize": 22,
        "fontStyle": "normal",
        "text": "test",
      },
      "tooltips": {
        "callbacks": {
          "label": [Function],
        },
      },
    },
    "type": "line",
  },
}
`;

exports[`datasource tests create chart with row datasets 1`] = `
{
  "background": "#FFFFFF",
  "chartJsConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": "#1F77B4",
          "borderColor": "rgb(31,119,180)",
          "data": [
            30,
            31,
            32,
          ],
          "fill": false,
          "label": "first row dataset",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(31,119,180)",
        },
        {
          "backgroundColor": "#FF7F0E",
          "borderColor": "rgb(255,127,14)",
          "data": [
            40,
            41,
            42,
          ],
          "fill": false,
          "label": "second row dataset",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(255,127,14)",
        },
      ],
      "labels": [
        "P4",
        "P5",
        "P6",
      ],
    },
    "options": {
      "animation": {
        "duration": 0,
      },
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "hover": {
        "animationDuration": 10,
      },
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 10,
        },
      },
      "legend": {
        "labels": {
          "fontColor": "#000000",
          "generateLabels": [Function],
        },
        "onClick": undefined,
        "position": "top",
      },
      "maintainAspectRatio": false,
      "responsive": true,
      "responsiveAnimationDuration": 0,
      "scales": {
        "xAxes": [
          {
            "ticks": {
              "fontColor": "#000000",
              "labelOffset": 2,
              "maxRotation": 60,
              "minRotation": 15,
              "padding": 5,
            },
          },
        ],
        "yAxes": [
          {
            "position": "left",
            "ticks": {
              "beginAtZero": true,
              "callback": [Function],
              "fontColor": "#000000",
            },
          },
        ],
      },
      "title": {
        "display": true,
        "fontColor": "#000000",
        "fontSize": 22,
        "fontStyle": "normal",
        "text": "test",
      },
      "tooltips": {
        "callbacks": {
          "label": [Function],
        },
      },
    },
    "type": "line",
  },
}
`;

exports[`datasource tests create chart with row datasets with category title 1`] = `
{
  "background": "#FFFFFF",
  "chartJsConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": "#1F77B4",
          "borderColor": "rgb(31,119,180)",
          "data": [
            30,
            31,
            32,
          ],
          "fill": false,
          "label": "first row dataset",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(31,119,180)",
        },
        {
          "backgroundColor": "#FF7F0E",
          "borderColor": "rgb(255,127,14)",
          "data": [
            40,
            41,
            42,
          ],
          "fill": false,
          "label": "second row dataset",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(255,127,14)",
        },
      ],
      "labels": [
        "P4",
        "P5",
        "P6",
      ],
    },
    "options": {
      "animation": {
        "duration": 0,
      },
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "hover": {
        "animationDuration": 10,
      },
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 10,
        },
      },
      "legend": {
        "labels": {
          "fontColor": "#000000",
          "generateLabels": [Function],
        },
        "onClick": undefined,
        "position": "top",
      },
      "maintainAspectRatio": false,
      "responsive": true,
      "responsiveAnimationDuration": 0,
      "scales": {
        "xAxes": [
          {
            "ticks": {
              "fontColor": "#000000",
              "labelOffset": 2,
              "maxRotation": 60,
              "minRotation": 15,
              "padding": 5,
            },
          },
        ],
        "yAxes": [
          {
            "position": "left",
            "ticks": {
              "beginAtZero": true,
              "callback": [Function],
              "fontColor": "#000000",
            },
          },
        ],
      },
      "title": {
        "display": true,
        "fontColor": "#000000",
        "fontSize": 22,
        "fontStyle": "normal",
        "text": "test",
      },
      "tooltips": {
        "callbacks": {
          "label": [Function],
        },
      },
    },
    "type": "line",
  },
}
`;

exports[`datasource tests create chart with row datasets without series title 1`] = `
{
  "background": "#FFFFFF",
  "chartJsConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": "#1F77B4",
          "borderColor": "rgb(31,119,180)",
          "data": [
            30,
            31,
            32,
          ],
          "fill": false,
          "label": "Series 1",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(31,119,180)",
        },
        {
          "backgroundColor": "#FF7F0E",
          "borderColor": "rgb(255,127,14)",
          "data": [
            40,
            41,
            42,
          ],
          "fill": false,
          "label": "Series 2",
          "lineTension": 0,
          "pointBackgroundColor": "rgb(255,127,14)",
        },
      ],
      "labels": [
        "P4",
        "P5",
        "P6",
      ],
    },
    "options": {
      "animation": {
        "duration": 0,
      },
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "hover": {
        "animationDuration": 10,
      },
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 10,
        },
      },
      "legend": {
        "labels": {
          "fontColor": "#000000",
          "generateLabels": [Function],
        },
        "onClick": undefined,
        "position": "top",
      },
      "maintainAspectRatio": false,
      "responsive": true,
      "responsiveAnimationDuration": 0,
      "scales": {
        "xAxes": [
          {
            "ticks": {
              "fontColor": "#000000",
              "labelOffset": 2,
              "maxRotation": 60,
              "minRotation": 15,
              "padding": 5,
            },
          },
        ],
        "yAxes": [
          {
            "position": "left",
            "ticks": {
              "beginAtZero": true,
              "callback": [Function],
              "fontColor": "#000000",
            },
          },
        ],
      },
      "title": {
        "display": true,
        "fontColor": "#000000",
        "fontSize": 22,
        "fontStyle": "normal",
        "text": "test",
      },
      "tooltips": {
        "callbacks": {
          "label": [Function],
        },
      },
    },
    "type": "line",
  },
}
`;
